新增Java8新特性的内容之其它八种新特性